# app/routes/passengers/resetPassword.js
@@ -1,0 +1,8 @@
+const express = require('express')
+const { ResetPassengersPassword } = require('../../controllers/passengerAuths')
+
+const router = express.Router()
+
+router.post('/', ResetPassengersPassword)
+
+module.exports = router
